<resources>
    <string name="app_name">Restaurant</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Mapa</string>
    <string name="menu_slideshow">Mis Datos</string>
    <string name="menu_historial">Historial de Compra</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_reclamaciones">Reclamaciones</string>
    <string name="menu_salir">Salir</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>